# triggers

./: .gitignore  README.md  TRIGGERS.md  USAGE.md  install-remote.sh  install.sh  pyproject.toml  setup.py  uninstall.sh
.github/: CODEOWNERS
.github/workflows/: test.yml
bundled/: README.md
catalog/: README.md
catalog/poll/: on-train-done.md
catalog/session/: auto-commit-push.md
docs/: README.md  design.md  github-branch-protection.md  hermes.md
docs/admin/: github-branch-protection.md
docs/archive/: design-v1-zh.md
docs/integrations/: codex.md  hermes.md
docs/proposals/: upstream-submission.md  user-prompt-submit-replacement-context.md
examples/: README.md  session-commit-on-feature.md  time-daily-backup.md
scripts/: apply-branch-protection.sh  test-statusline.py
scripts/admin/: apply-branch-protection.sh
skill/: SKILL.md
tests/: conftest.py  test_agents.py  test_bundled.py  test_codex.py  test_context.py  test_detect.py  test_doctor.py  test_frontmatter.py  test_hermes.py  test_hookgen.py  test_install_cli.py  test_integration.py  test_library.py  test_list_merged.py  test_package.py  test_roots.py  test_schedule.py  test_transcript.py  test_tz.py  test_uninstall.py  test_validate.py
tests/manual/: test_statusline.py
triggerctl/: __init__.py  agents.py  cli.py  codex.py  commands.py  detect.py  doctor.py  execute.py  frontmatter.py  hermes.py  hook_runner.py  hookgen.py  library.py  lockfile.py  model.py  package.py  paths.py  poll.py  registry.py  roots.py  runlog.py  schedule.py  transcript.py  tz.py  uninstall.py  validate.py
