[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triggerctl"
version = "0.1.0"
description = "Triggers for Claude Code: register/list/detect/execute time- and condition-based triggers, with a cheap detection tier and a model execution tier."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
triggerctl = "triggerctl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["triggerctl*"]
